Adding support for different RabbitMQ queue types.
Also updated RabbitMQ libraries to latest version available, and set TaskManager to java 17.